syntax = "proto3";

package cruce;

option go_package = "./protobufs";

service UserService {
	rpc Create(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
	string user_id = 1;
	string name = 2;
	optional string image_url = 3;
}

message CreateUserResponse {}

